# yt_old_finder

./: .gitignore  Cargo.toml
src/: detail.rs  finder.rs  helper.rs  main.rs
