[package]
name = "yt_old_finder"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.45.1", features = ["full"]}
reqwest = {version = "0.12.16", features = ["json"]}
serde = {version = "1.0.219", features = ["derive"]}
rand = {version = "0.9.1"}
webbrowser = {version = "1.0.4"}
dotenv = {version = "0.15.0"}